# olol

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RTX5090_GUIDE.md  SECURITY.md  build-release.sh  docker-compose.yml  pyproject.toml  requirements-full.txt  requirements.txt  setup.bat  setup.py  setup.sh
.github/workflows/: ci.yml
docs/: ollama-cluster-architecture.mermaid.md  ollama-cluster-erdiagram.mermaid.md  ollama-cluster-sequence.mermaid.md
examples/: client_demo.py
src/: ollama_async_pb2.py  ollama_async_pb2_grpc.py
src/olol/: __init__.py  __main__.py  ollama_async_client.py  ollama_pb2.py  ollama_pb2_grpc.py  ollama_service.py  proxy.py  server.py  service.py
src/olol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/olol/async/: __init__.py  server.py
src/olol/async_impl/: __init__.py  client.py  server.py
src/olol/proto/: .proto_hash  __init__.py  ollama.proto  ollama_pb2.py  ollama_pb2_grpc.py
src/olol/rpc/: __init__.py  client.py  coordinator.py  server.py
src/olol/sync/: __init__.py  client.py
src/olol/utils/: __init__.py  cluster.py  discovery.py  protoc.py
src/script/: oprotob.py
tests/: bench_ollama.py  conftest.py  ollama-benchmark-script.py  ollama-test-harness.py  test_ollama_service.py  test_oprotob.py
tools/: build-simple.sh  build-wheel.py  build.sh  protoc-build.sh
