[project]
name = "olol"
version = "0.1.0"
description = "Ollama gRPC interface with sync/async support for distributed clustering"
readme = "README.md"
authors = [
    { name = "Shane Macaulay", email = "ktwo@ktwo.ca" }
]
maintainers = [
    { name = "K2", email = "ktwo@ktwo.ca" }
]

license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["ollama", "llm", "grpc", "protobuf", "async", "asyncio", "cluster", "distributed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent"
]
dependencies = [
    "grpcio>=1.62.1",
    "grpcio-tools>=1.62.1",
    "protobuf>=4.25.3",
    "grpclib>=0.4.7",
    "flask>=2.0.0",
    "aiohttp>=3.8.0",
    "numpy>=2.2.3",
    "requests>=2.31.0",
    "ruff>=0.9.10",
]

[project.urls]
Homepage = "https://github.com/K2/olol"
Documentation = "https://olol.readthedocs.io/"
Repository = "https://github.com/K2/olol.git"
BugTracker = "https://github.com/K2/olol/issues"

[project.scripts]
olol = "olol.__main__:main"
olol-protoc = "olol.utils.protoc:build"
olol-proxy = "olol.__main__:run_proxy_entrypoint"
olol-server = "olol.__main__:run_server_entrypoint"
olol-rpc = "olol.__main__:run_rpc_server_entrypoint"
olol-dist = "olol.__main__:run_dist_entrypoint"
olol-client = "olol.__main__:run_client_entrypoint"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/olol"]
include = [
    "src/olol/**/*.py",
    "src/olol/proto/*.proto",
]
only-packages = false

[tool.hatch.build.targets.wheel.force-include]
"src/olol/proto/ollama.proto" = "olol/proto/ollama.proto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -ra --cov=olol"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501"]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0"
]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "ruff>=0.0.280",
    "pre-commit>=3.3.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.18.0"
]
proxy = [
    "flask>=2.0.0"
]
async = [
    "aiohttp>=3.8.0"
]
